c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/compare_pointer_to_int.c
int main(void)
{
    long *l = 0;
    // It's illegal to compare a pointer to any integer type
    // without explicitly casting to the same type
    return l <= 100ul;
}